src/styles/base/_variables.scss
@use "../mixins";

html body {
  --100VH: calc(var(--vh, 1vh) * 100);
  /* ********************************          GLOBAL SIZES          ******************************** */
  
  --screen-hg-min: 1920px; /* Large PCs  [1920, INF  ] 80px | 1760px (15c 80|40) | 80px */
  --screen-lg-min: 1280px; /* PCs        [1280, 1920O) 80px | 1120px (12c 64|32) | 80px */
  --screen-md-min: 640px; /* Tablets     [640,   1280) 40px |  560px (12c 32|16) | 40px */
  --screen-sm-min: 320px; /* Phones      [320,    640)  0px |  320px ( 7c 32|16) |  0px */
  
  //@include mixins.hg { --screen-content-width: 1760px; }
  //@include mixins.lg { --screen-content-width: calc(100vw - 160px); }
  //@include mixins.md { --screen-content-width: calc(100vw - 80px); }
  //@include mixins.sm { --screen-content-width: calc(100vw - 20px); }
  
  @include mixins.hg { --screen-cols: 15; }
  @include mixins.lg { --screen-cols: 12; }
  @include mixins.md { --screen-cols: 12; }
  @include mixins.sm { --screen-cols: 7; }
}

html body {
  //--screen-col-pad-width: calc(var(--screen-content-width, 100vw) / ((var(--screen-cols, 1) * 2) + var(--screen-cols, 1) - 1));
  --screen-col-pad-width: calc(min(100vw, 1760px) / ((var(--screen-cols, 1) * 2) + 4 + var(--screen-cols, 1) - 1));
  --screen-col-width: calc(var(--screen-col-pad-width, 1) * 2);
  --screen-content-width: calc((var(--screen-cols, 1) + 2) * var(--screen-col-width) + (var(--screen-cols, 1) - 1) * var(--screen-col-pad-width, 1));
  
  --modal-cols-sm: calc(var(--screen-cols) - 4);
  --modal-cols-md: calc(var(--screen-cols) - 2);
  --modal-cols-lg: var(--screen-cols);
  
  --modal-width-sm: calc(var(--modal-cols-sm, 1) * var(--screen-col-width) + (var(--modal-cols-sm, 1) - 1) * var(--screen-col-pad-width, 1));
  --modal-width-md: calc(var(--modal-cols-md, 1) * var(--screen-col-width) + (var(--modal-cols-md, 1) - 1) * var(--screen-col-pad-width, 1));
  --modal-width-lg: calc(var(--modal-cols-lg, 1) * var(--screen-col-width) + (var(--modal-cols-lg, 1) - 1) * var(--screen-col-pad-width, 1));
  --modal-max-height: calc(var(--vh, 1vh) * 90);
  
  --pad-xH: 56px;
  --pad-H: 52px;
  --pad-xL: 48px;
  --pad-L: 44px;
  --pad-xh: 40px;
  --pad-h: 36px;
  --pad-xl: 32px;
  --pad-l: 28px;
  --pad-m: 24px;
  --pad-s: 20px;
  --pad-xs: 16px;
  --pad-t: 12px;
  --pad-xt: 8px;
  
  @include mixins.hg { --pad-lg: var(--pad-h); }
  @include mixins.lg { --pad-lg: var(--pad-xl); }
  @include mixins.md { --pad-lg: var(--pad-l); }
  @include mixins.sm { --pad-lg: var(--pad-m); }
  
  @include mixins.hg { --pad-md: var(--pad-l); }
  @include mixins.lg { --pad-md: var(--pad-m); }
  @include mixins.md { --pad-md: var(--pad-s); }
  @include mixins.sm { --pad-md: var(--pad-xs); }
  
  @include mixins.hg { --pad-sm: var(--pad-s); }
  @include mixins.lg { --pad-sm: var(--pad-xs); }
  @include mixins.md { --pad-sm: var(--pad-t); }
  @include mixins.sm { --pad-sm: var(--pad-xt); }
  
  @include mixins.hg { --gap: 12px; }
  @include mixins.lg { --gap: 10px; }
  @include mixins.md { --gap: 8px; }
  @include mixins.sm { --gap: 6px; }
  
  @include mixins.hg { --border-radius: 16px; }
  @include mixins.lg { --border-radius: 14px; }
  @include mixins.md { --border-radius: 12px; }
  @include mixins.sm { --border-radius: 10px; }
  
  @include mixins.hg { --border-radius-inline: 7px; }
  @include mixins.lg { --border-radius-inline: 6px; }
  @include mixins.md { --border-radius-inline: 5px; }
  @include mixins.sm { --border-radius-inline: 10px; }
}

html body {
  --weight-lighter: 100;
  --weight-light: 200;
  --weight-regular: 300;
  --weight-bold: 500;
  --weight-bolder: 700;
  
  --base-text-size: 16px;
  --base-text-height: calc(var(--base-text-size) * 1.5);
  
  --base-diff-text-size: calc(var(--base-text-size) * 0.125);
  
  --text-huge-size: calc(var(--base-text-size) + var(--base-diff-text-size) + var(--base-diff-text-size));
  --text-huge-height: calc(var(--text-huge-size) * 1.5);
  --text-large-size: calc(var(--base-text-size) + var(--base-diff-text-size));
  --text-large-height: calc(var(--text-large-size) * 1.5);
  --text-medium-size: var(--base-text-size); // 16
  --text-medium-height: calc(var(--text-medium-size) * 1.5);
  --text-small-size: calc(var(--base-text-size) - var(--base-diff-text-size));
  --text-small-height: calc(var(--text-small-size) * 1.5);
  --text-tiny-size: calc(var(--base-text-size) - var(--base-diff-text-size) - var(--base-diff-text-size));
  --text-tiny-height: calc(var(--text-tiny-size) * 1.5);
  
  --line-height-head: 1.4;
  --font-size-h3: calc(var(--base-text-size) + 10px); // 26
  --font-size-h2: calc(var(--base-text-size) + 14px); // 30
  --font-size-h1: calc(var(--base-text-size) + 18px); // 34
  
  // 22
  @include mixins.sm { --font-size-h3: calc(var(--base-text-size) + 10px - 4px); }
  // 26
  @include mixins.sm { --font-size-h2: calc(var(--base-text-size) + 14px - 4px); }
  // 30
  @include mixins.sm { --font-size-h1: calc(var(--base-text-size) + 18px - 4px); }
}

html body {
  --z-index-menu: 50;
  --z-index-select-options: 60;
  --z-index-drawer: 200;
  --z-index-overlay: 300;
  --z-index-popover: 400;
  --z-index-tooltip: 500;
  --z-index-notification: 600;
  
  --left-vertical-collapsed-menu-width: 48px;
  
  --size-very-huge-icon: 60px;
  --size-huge-icon: var(--pad-xL);
  --size-large-icon: var(--pad-h);
  --size-regular-icon: var(--base-text-height); // var(--pad-m);
  --size-small-icon: 18px;
  --size-tiny-icon: var(--pad-t);
  
  --size-scrollbar: 8px;
  
  --t-color-background: var(--t-color-white-dark);
  
  --transition-duration-slow: 0.45s;
  --transition-duration: 0.3s;
  --transition-duration-fast: 0.15s;
}

